veecle-osal-api/tests/ui/time_interval_must_use.stderr
error: unused return value of `interval` that must be used
 --> tests/ui/time_interval_must_use.rs:6:5
  |
6 |     T::interval(Duration::from_secs(1));
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/ui/time_interval_must_use.rs:1:9
  |
1 | #![deny(unused_must_use)]
  |         ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
  |
6 |     let _ = T::interval(Duration::from_secs(1));
  |     +++++++
